--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -1,1 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:ital,wght@0,400;0,500;1,700&display=swap');
+
+/* Colors */
+
 $headerColor: #E92569;
+$backgroundColor: #EFEFEF;
+$fontDark: #0A0A0A;
+$whiteColor: #ffffff;
+
+/* Fonts */
+
+$fontHeader: 'Playfair Display', serif;
+$fontText: 'Lato', sans-serif;
+
+
